<resources>
    <string name="app_name">WayMaps</string>

    <!-- Strings related to login -->
    <string name="login">Login</string>
    <string name="pass">Password</string>
    <string name="log_in">Login</string>
    <string name="error_field_pass">Password check error</string>
    <string name="error_field_login">Login check error</string>
    <string name="error_field_login_null">Login can\'t be null</string>
    <string name="error_field_pass_null">Password can\'t be null</string>
    <string name="error_incorrect_credentials">This credentials are incorrect</string>
    <string name="pass_save">Save password</string>
    <string translatable="false" name="title_activity_main">MainActivity</string>
    <string name="notif_firm_bloked">Sorry, but you have an overdue fee for a subscription fee</string>
    <string name="notif_saldo_minus">Please note that you have unpaid services in the amount</string>

    <string translatable="false" name="navigation_drawer_open">Open navigation drawer</string>
    <string translatable="false" name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="balance">Balance</string>
    <string name="technical_support">Technical support</string>
    <string name="save_location">Save map state</string>
    <string name="settings">Settings</string>
    <string name="online">Online</string>
    <string name="title_activity_maps">Map</string>
    <string name="date">Date</string>
    <string name="debet">Debet</string>
    <string name="credit">Credit</string>
    <string name="location_saved">Location saved!</string>
    <string name="error_saving_location">Online screen should be chosen</string>
    <string name="record_not_found">No found any record</string>

    <!--Main Activity -->
    <string name="exit_dialog">Exit</string>
    <string name="exit_message">Do you want logout ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>

    <!--Balance layout -->
    <string name="column1">Date</string>
    <string name="column2">Receipt of customer payment</string>
    <string name="column3">Write-offs for services</string>
    <string name="column4">Balance of account</string>

    <!--Message Layout-->
    <string name="message_from">Sender</string>
    <string name="type_your_message">Type your message</string>
    <string name="send_message">Send</string>
    <string name="message_actionbar_title">Create ticket</string>

    <!--Tracker list layout-->
    <string name="tracker_list_actionbar_title">Tracker</string>

    <!--Ticket list layout-->
    <string name="ticket_list_actionbar_title">Tickets</string>
    <string name="state">State</string>
    <string name="actual">Actual</string>
    <string name="stop">Stop</string>
    <string name="speed">Speed</string>
    <string name="ignition">Ignition</string>
    <string name="engine">Engine</string>
    <string name="voltage">Voltage</string>
    <string name="satellite">Satellite</string>
    <string name="signal">Signal</string>
    <string name="volume_fuel">Volume of fuel</string>
    <string name="fuel_consumption">Fuel consumption</string>
    <string name="kmperhour">km/hr</string>
    <string name="statusonline">Online</string>
    <string name="statusoffline">Offline</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="lperkm">l/ 100 km</string>
    <string name="l">l</string>
    <string name="very_well">Very good</string>
    <string name="good">Good</string>
    <string name="normal">Normal</string>
    <string name="bad">Bad</string>
    <string name="absent">Absent</string>
    <string name="pieces">pc</string>
    <string name="battery">Battery</string>
    <string name="v">V</string>
    <string name="day">d</string>
    <string name="hour">h</string>
    <string name="minute">m</string>
    <string name="second">s</string>
    <string name="all">All</string>

    <!--GetTicket list layout -->
    <string name="get_ticket_actionbar_title">Ticket</string>
    <string name="add_comment">Type to add comment</string>

    <!--GetFirms list layout -->
    <string name="get_firms_actionbar_title">Firm list</string>
    <string name="moving">Moving</string>
    <string name="speedsmall">speed</string>
    <string name="history_date_from">Date from</string>
    <string name="history">History</string>
    <string name="pick_end_date">Pick end date</string>
    <string name="pick_start_date">Pick start date</string>
    <string name="picked_period">Picked period</string>
    <string name="object">Object</string>
    <string name="driver">Driver</string>
    <string name="select_time_period">Select time period:</string>
    <string name="track_length">Track length:</string>
    <string name="calculate">Calculate</string>
    <string name="show_track">Show track</string>
    <string name="show_report">Show report</string>
    <string name="no_data_found">No data found</string>
    <string name="km">km</string>
    <string name="somethin_went_wrong">Something went wrong</string>
    <string name="total_time">Total time</string>
    <string name="traffic_time">Traffic time</string>
    <string name="trafic_time">Trafic time</string>
    <string name="total_distance">Total distance</string>
    <string name="average_speed">Average speed</string>
    <string name="average_speed_include_parking">Average speed include parking</string>
    <string name="parking_count">Parking count</string>
    <string name="parking_time">Parking time</string>
    <string name="max_speed">Max speed</string>
    <string name="speed_limit">Speed limit</string>
    <string name="excesses_total_count">Excesses total count</string>
    <string name="excesses_total_time">Excesses total time</string>
    <string name="excesses_percentage">Excesses percentage</string>
    <string name="ok">Ok!</string>
    <string name="min_stop_time">Min stop time</string>
    <string name="chosen_period">Chosen period</string>
    <string name="distance_for_period">Distance for period</string>
    <string name="fuel_burned">Fuel burned</string>
    <string name="network">Network</string>
    <string name="error_loading_point">Error while trying to load point</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance</string>
    <string name="date_from">Date from</string>
    <string name="date_to">Date to</string>
    <string name="group_list">Group list</string>
    <string name="get_tracker">Trackers</string>
    <string name="personal_account">Personal account</string>
    <string name="uah">UAH</string>
    <string name="balancesmall">Current balance: </string>
    <string name="parking">Parking</string>
    <string name="way_point">Way point</string>
    <string name="downloading_data">Downloading data...</string>
    <string name="preprocessing_data">Preprocessing data...</string>
    <string name="draw_way">Drawing way...</string>
    <string name="prepare_stop_info">Preparing info about stops...</string>
    <string name="done">Done!</string>
    <string name="map_type">Choose map type</string>
    <string name="press_one_more_time">Press again to exit</string>
    <string name="filter_by_group">Filter by group:</string>
    <string name="distance_sum">Distance</string>
    <string name="date_time">Date and time</string>
    <string name="continues">Continues</string>
    <string name="hist_max_speed">Max speed:</string>
    <string name="hist_parking_count">Parking count:</string>
    <string name="hist_fuelexpense">Fuel consumption:</string>
    <string name="mini_stop">Stop</string>
    <string name="hist_speed_limit">Set speed limit:</string>
    <string name="create_ticket">Creating ticket</string>
    <string name="map_screen_should_be_chosen">Map screen should be active</string>
    <string name="movement_mode">Movement mode</string>
    <string name="speed_excesses">Speed excesses</string>
    <string name="used_fuel">Used fuel</string>
    <string name="report_fuel_consumption">Fuel consumption</string>
    <string name="calculating">Calculating...</string>
    <string name="Manager">Manager</string>
    <string name="ticker_created">Ticker created</string>
    <string name="markers_will_be_filtered">Attention! Route include too many points, markers will be evenly filtered.</string>

</resources>
