<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/online" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/history" />
        <!--<item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_setting"
            android:title="@string/settings" />-->
    </group>

    <item
        android:id="@+id/nav_save_location"
        android:icon="@drawable/ic_save_location"
        android:title="@string/save_location" />

    <item android:title="Manager">
        <menu>
            <item
                android:id="@+id/nav_balance"
                android:icon="@drawable/ic_balance"
                android:title="@string/balance" />
            <item
                android:id="@+id/nav_tech_supp"
                android:icon="@drawable/ic_tech_supp"
                android:title="@string/technical_support" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />

</menu>
