<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:custom="http://schemas.android.com/tools">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/action_bar_history"
            layout="@layout/classic_action_bar"></include>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:text="@string/object"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/history_object"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@color/transparent"
                android:inputType="none|textNoSuggestions"
                android:focusable="false"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:text="@string/driver"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/history_driver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@color/transparent"
                android:inputType="none|textNoSuggestions"
                android:focusable="false"
                android:text="" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/select_time_period"
            android:textSize="20sp" />

        <Button
            android:id="@+id/date_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="0"
            android:text="@string/pick_start_date" />

        <Button
            android:id="@+id/date_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="0"
            android:text="@string/pick_end_date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/track_length" />

            <EditText
                android:id="@+id/history_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:focusable="false"
                android:inputType="none|textNoSuggestions"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/history_calculate_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/history_calculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculate" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/history_show_info_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone"
            android:padding="10dp">

            <Button
                android:id="@+id/history_show_track"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:text="@string/show_track" />

            <Button
                android:id="@+id/history_show_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:text="@string/show_report" />
        </LinearLayout>

    </LinearLayout>



</LinearLayout>