<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    android:paddingLeft="25dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/HistoryLabel"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0"
                    android:gravity="center"
                    android:text="@string/date_time" />

                <!-- <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        style="@style/HistoryLabel"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="10dp"
                        android:text="@string/from" />

                    <TextView
                        style="@style/HistoryLabel"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="10dp"
                        android:text="@string/to" />
                </LinearLayout>-->
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/history_period_from"
                        style="@style/HistoryLabel"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:text="From"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/history_period_to"
                        style="@style/HistoryLabel"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:text="To" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                style="@style/HistoryLabel"
                android:text="@string/distance_sum" />

            <TextView
                android:id="@+id/history_distance"
                style="@style/HistoryLabel"
                android:text="1 minute" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/history_burn_fuel_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/HistoryLabel"
                android:text="@string/fuel_burned" />

            <TextView
                android:id="@+id/history_burn_fuel"
                style="@style/HistoryLabel"
                android:text="1 minute" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/history_fuelexpense_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="horizontal">

            <TextView
                style="@style/HistoryLabel"
                android:text="@string/hist_fuelexpense" />

            <TextView
                android:id="@+id/history_fuelexpense"
                style="@style/HistoryLabel"
                android:text="1 minute" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                style="@style/HistoryLabel"
                android:text="@string/speed" />

            <TextView
                android:id="@+id/history_speed"
                style="@style/HistoryLabel"
                android:text="10km/per hour" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/history_ignition_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/HistoryLabel"
                android:text="@string/ignition" />

            <TextView
                android:id="@+id/history_ignition"
                style="@style/HistoryLabel"
                android:text="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/history_engine_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/HistoryLabel"
                android:text="@string/engine" />

            <TextView
                android:id="@+id/history_engine"
                style="@style/HistoryLabel"
                android:text="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/history_voltage_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                style="@style/HistoryLabel"
                android:text="@string/voltage" />

            <TextView
                android:id="@+id/history_voltage"
                style="@style/HistoryLabel"
                android:text="122" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/history_gps_satellite_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/HistoryLabel"
                android:text="@string/satellite" />

            <TextView
                android:id="@+id/history_gps_satellite"
                style="@style/HistoryLabel"
                android:text="12" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/history_gps_signal_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/HistoryLabel"
                android:text="@string/signal" />

            <TextView
                android:id="@+id/history_gps_signal"
                style="@style/HistoryLabel"
                android:text="1" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
